feat: :sparkles: update Card models to use uuid and general WIP stuff

--- a/nachotime-services/nachotime-services.csproj
+++ b/nachotime-services/nachotime-services.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\nachotime-api-models\nachotime-api-models.csproj" />
+    <ProjectReference Include="..\nachotime-data\nachotime-data.csproj" />
+  </ItemGroup>
+
 </Project>
