feat: :sparkles: Add and configure Authentication and Authorization with Auth0

--- a/nachotime-api/appsettings.json
+++ b/nachotime-api/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "NachotimeDbContext": "Server=127.0.0.1;Port=5432;Database=nachotime-db;User Id=postgres;Password=postgres;CommandTimeout=120;"
   },
+  "Auth0": {
+    "Domain": "dev-zi8jdrh84ptjkc6i.us.auth0.com",
+    "Audience": "https://nachotime/api"
+  },
   "AllowedHosts": "*"
 }
